--- a/styles/components/button.css
+++ b/styles/components/button.css
@@ -3,10 +3,17 @@
     padding:10px 20px;
     color:#fff;
     text-decoration: none;
-    font-size: 1.2rem;
+    font-size: 1.4rem;
     border:2px solid var(--buttonBg);
+    border-radius: 10px;
     letter-spacing: 1px;
     transition: .3s;
+}
+
+@media (min-width:750px) {
+    .button{
+        padding:15px 20px;
+    }
 }
 
 .button:hover{
