--- a/styles/components/header.css
+++ b/styles/components/header.css
@@ -9,6 +9,16 @@
     background-attachment: fixed;
 }
 
+.header__img::before{
+    content:'';
+    position: absolute;
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
+    background: rgba(73, 70, 67, 0.3);
+}
+
 @media (min-width:720px) {
     .header__img{
         background-image: url('/images/headerBg1280.jpg');
@@ -22,17 +32,17 @@
 }
 
 .header__content{
+    position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     text-align: center;
     width:90%;
-    max-width: 500px;
+    max-width: 800px;
     padding:20px;
-    background: rgba(0,0,0,.3);
     color:#fff;
-    box-shadow:inset 0 0 10px rgba(0,0,0,.5);
+    z-index: 1;
 }
 
 @media (min-width:750px) {
@@ -47,31 +57,60 @@
     text-transform: uppercase;
     letter-spacing: 1px;
     word-spacing: 3px;
-    font-size: 2rem;
+    font-family: 'Lexend', sans-serif;
+    font-size: 3rem;
+    font-weight: 900;
 }
 
 @media (min-width:750px) {
     .header__bold-text{
         margin-bottom: 25px;
-        font-size: 2.5rem;
+        font-size: 3.5rem;
+    }
+}
+
+@media (min-width:1024px) {
+    .header__bold-text{
+        margin-bottom: 25px;
+        font-size: 4rem;
+    }
+}
+
+@media (min-width:1280px) {
+    .header__bold-text{
+        margin-bottom: 25px;
+        font-size: 4.5rem;
+    }
+}
+
+@media (min-width:1440px) {
+    .header__bold-text{
+        margin-bottom: 25px;
+        font-size: 6rem;
     }
 }
 
 .header__small-text{
+    font-weight: 300;
     margin-bottom: 20px;
     line-height: 180%;
-    font-size: 1.2rem;
+    font-size: 1.4rem;
 }
 
 @media (min-width:750px) {
     .header__small-text{
-        margin-bottom: 25px;
-        line-height: 220%;
-        font-size: 1.4rem;
+        margin-bottom: 35px;
+        line-height: 250%;
+        font-size: 1.5rem;
     }
 }
 
 .header__button{
     width:100px;
-    border-radius: 10px;
+}
+
+@media (min-width:750px) {
+    .header__button{
+        width:120px;
+    }
 }
