--- a/styles/main.css
+++ b/styles/main.css
@@ -1,5 +1,8 @@
-@import url('./components/nav.css');
 @import url('./components/button.css');
+@import url('./components/about.css');
+@import url('./components/header.css');
+@import url('./components/services.css');
+@import url('./components/nav.css');
 
 *{
     padding:0;
@@ -12,13 +15,14 @@
     --buttonBg:#2978b5;
     --buttonBgHover:#1f6092;
     --fontColor: #132c33;
-    --siteBg: #fbe0c4;
+    --siteBg: #f5ece2;
 }
 
 html{
-    font-family: 'Antonio', sans-serif;
+    font-family: 'Oswald', sans-serif;
     font-size: var(--basicFontSize);
     font-weight: 300;
+    scroll-behavior: smooth;
 }
 
 body{
