--- a/styles/main.css
+++ b/styles/main.css
@@ -27,7 +27,6 @@ html{
 
 body{
     background: var(--siteBg);
-    height:300vh;
 }
 
 button, input{
@@ -36,4 +35,28 @@ button, input{
 
 .section{
     margin:100px 0;
+}
+.section__header{
+    margin-bottom: 30px;
+    font-family: 'Lexend', sans-serif;
+    font-size: 2.5rem;
+    font-weight: 300;
+}
+
+@media (min-width:720px) {
+    .section__header{
+        font-size: 3.5rem;
+    }
+}
+
+@media (min-width:1024px) {
+    .section__header{
+        font-size: 4.5rem;
+    }
+}
+
+@media (min-width:1280px) {
+    .section__header{
+        font-size: 5.5rem;
+    }
 }
