--- a/styles/main.css
+++ b/styles/main.css
@@ -2,6 +2,7 @@
 @import url('./components/about.css');
 @import url('./components/header.css');
 @import url('./components/services.css');
+@import url('./components/portfolio.css');
 @import url('./components/nav.css');
 
 *{
