--- a/styles/main.css
+++ b/styles/main.css
@@ -3,6 +3,7 @@
 @import url('./components/contact.css');
 @import url('./components/footer.css');
 @import url('./components/header.css');
+@import url('./components/map.css');
 @import url('./components/nav.css');
 @import url('./components/portfolio.css');
 @import url('./components/services.css');
