--- a/styles/main.css
+++ b/styles/main.css
@@ -19,7 +19,7 @@
     --buttonBg:#2978b5;
     --buttonBgHover:#1f6092;
     --fontColor: #132c33;
-    --footerBg: #e7dacc;
+    --footerBg: #363431;
     --inputBg:#e9e0d7;
     --inputHoverBg:#fcf9f5;
     --siteBg: #f5ece2;
