--- a/styles/components/nav.css
+++ b/styles/components/nav.css
@@ -28,7 +28,7 @@
 }
 
 .nav--active{
-    top:0;
+    top:25px;
 }
 
 
@@ -75,20 +75,12 @@
     color:var(--navActiveElementColorForNavWithBg);
 }
 
-.nav__link--active{
-    color:var(--navActiveElementColorForNavWithBg);
-}
-
 @media (min-width:1024px) {
     .nav__link{
         color: var(--navElementFontColorForNavWithoutBg);
     }
 
     .nav__link:hover{
-        color: var(--navActiveElementColorForNavWithoutBg);
-    }
-
-    .nav__link--active{
         color: var(--navActiveElementColorForNavWithoutBg);
     }
 
@@ -99,19 +91,26 @@
     .nav--active .nav__link:hover{
         color:var(--navActiveElementColorForNavWithBg);
     }
+}
 
-    .nav--active .nav__link--active{
-        color:var(--navActiveElementColorForNavWithBg);
-    }
+.bars-container{
+    display: flex;
+    align-items: center;
+    position: fixed;
+    top:0;
+    left:0;
+    width:100%;
+    height:50px;
+    background: var(--siteBg);
+    z-index: 15;
 }
 
 .bars{
-    position: fixed;
-    top:5%;
+    position: absolute;
+    top:15px;
     right:5%;
     width:40px;
     height:40px;
-    z-index: 15;
     background: transparent;
     border:none;
     overflow: hidden;
@@ -145,7 +144,7 @@
 }
 
 @media (min-width:1024px) {
-    .bars{
+    .bars-container{
         display: none;
     }
 }
